<resources>
    <string name="app_name">SmartPosSDKTest</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_excp">扫描结果</string>
    <string name="scan_cancel_excp">取消扫描异常</string>
    <string name="cashierBox_pop_succ">弹出钱箱成功</string>
    <string name="cashierBox_pop_fail">弹出钱箱失败</string>
    <string name="customer_display_init_succ">初始化客显设备成功</string>
    <string name="customer_display_init_fail">初始化客显示设备失败</string>
    <string name="customer_display_open_succ">打开客显设备成功</string>
    <string name="customer_display_open_fail">打开客显示设备失败</string>
    <string name="customer_display_show">客显设备显示结果</string>
    <string name="customer_display_show_err">客显示设备显示操作异常</string>
    <string name="customer_display_clean">清除显示结果</string>
    <string name="customer_display_clean_err">清除显示结果异常</string>
    <string name="customer_display_close_succ">关闭客显设备成功</string>
    <string name="customer_display_close_fail">关闭客显设备失败</string>
    <string name="customer_display_close_err">关闭客显示设备异常</string>
    <string name="led_give_change_light">找零灯亮</string>
    <string name="led_charge_light">收款灯亮</string>
    <string name="led_unit_price_light">单价灯亮</string>
    <string name="led_count_light">总计灯亮</string>
    <string name="led_off">灯灭</string>
    <string name="security_module_open_succ">安全模块打开成功</string>
    <string name="security_module_open_fail">安全模块打开失败</string>
    <string name="security_module_data_save_succ">安全模块保存数据成功</string>
    <string name="security_module_data_save_fail">安全模块保存数据失败</string>
    <string name="security_module_save_fail">安全模块保存失败</string>
    <string name="security_module_close_succ">安全模块关闭成功</string>
    <string name="security_module_close_fail">安全模块关闭失败</string>
    <string name="public_key_export_succ">公钥导出成功</string>
    <string name="public_key_export_result_null">公钥导出为null</string>
    <string name="public_key_export_fail">公钥导出失败</string>
    <string name="iccard_open_succ">打开接触式IC卡设备成功</string>
    <string name="iccard_open_fail">打开接触式IC卡设备失败</string>
    <string name="iccard_state_result">查询状态接口返回结果</string>
    <string name="iccard_reset_result">IC卡设备复位结果</string>
    <string name="iccard_reset_fail">IC卡设备复位失败</string>
    <string name="iccard_interrupt_succ">中断IC卡设备成功</string>
    <string name="iccard_interrupt_fail">IC卡设备中断失败</string>
    <string name="iccard_choose_catelog_result">IC卡设备选择目录结果</string>
    <string name="iccard_APDU_fail_and_reset">APDU交互失败，请先执行复位操作</string>
    <string name="iccard_choose_catelog_excp">IC卡设备选择目录异常</string>
    <string name="iccard_close_succ">关闭IC卡设备成功</string>
    <string name="iccard_close_excp">关闭IC卡设备异常</string>
    <string name="idcard_begin_scan">开始扫描身份证</string>
    <string name="idcard_scan_fail">扫描身份证失败</string>
    <string name="idcard_scan_succ">扫描身份证成功</string>
    <string name="idcard_name">姓名</string>
    <string name="idcard_nationality">民族</string>
    <string name="idcard_birthday">生日</string>
    <string name="idcard_address">住址</string>
    <string name="idcard_number">身份证号码</string>
    <string name="idcard_authority">发证机关</string>
    <string name="idcard_valid_date_begin">有效期开始</string>
    <string name="idcard_valid_date_end">有效期截止</string>
    <string name="idcard_new_address">新地址</string>
    <string name="idcard_picture_print_finish">打印身份证图像完成</string>
    <string name="idcard_picture_print_err">打印身份证信息错误"</string>
    <string name="idcard_scan_timeout">扫描身份证超时</string>
    <string name="idcard_scan_stop_succ">停止扫描成功</string>
    <string name="idcard_sex">性别</string>
    <string name="idcard_dn_code">DN码</string>
    <string name="idcard_html_scan">html方式</string>
    <string name="rfcard_type">非接卡获取卡片类型成功为</string>
    <string name="rfcard_type_excp">非接卡获取卡片类型异常</string>
    <string name="rfcard_open_succ">打开非接卡设备成功</string>
    <string name="rfcard_open_fail">打开非接卡设备失败</string>
    <string name="rfcard_state">非接卡查询状态接口返回结果</string>
    <string name="rfcard_pwmbeep_param_set_succ">pwmbeep参数设置成功</string>
    <string name="rfcard_pwmbeep_param_set_err">pwmbeep参数设置异常</string>
    <string name="rfcard_led_control_succ">非接LED灯控制成功</string>
    <string name="rfcard_led_control_fail">非接LED灯控制失败</string>
    <string name="rfcard_reset_result">非接卡复位结果</string>
    <string name="rfcard_reset_fail">非接卡设备复位失败</string>
    <string name="rfcard_halt_succ">中断非接卡设备成功"</string>
    <string name="rfcard_halt_fail">中断非接卡设备失败</string>
    <string name="rfcard_category_null">非接卡设备选择目录结果为null</string>
    <string name="rfcard_category">非接卡设备选择目录结果</string>
    <string name="rfcard_category_excp">非接卡设备选择目录异常</string>
    <string name="rfcard_close_succ">关闭非接卡设备成功</string>
    <string name="rfcard_close_excp">关闭非接卡设备异常"</string>
    <string name="rfcard_communicate_idcard_succ">与身份证交互成功</string>
    <string name="printer_checkblack_succ">检测黑标成功</string>
    <string name="printer_checkblack_fail">检测黑标失败</string>
    <string name="rfcard_communicate_idcard_fail">与身份证交互失败</string>
    <string name="rfcard_wupareset_succ">wupa复位成功</string>
    <string name="rfcard_wupareset_fail">wupa复位失败</string>
    <string name="rfcard_fxauth_fail">方新认证失败</string>
    <string name="rfcard_fxauth_success">方新认证成功</string>
    <string name="lcd_light_succ">LCD亮屏成功</string>
    <string name="lcd_light_fail">LCD亮屏失败</string>
    <string name="lcd_off_succ">LCD灭屏成功</string>
    <string name="lcd_off_fail">LCD灭屏失败</string>
    <string name="m1card_state">M1卡设备查询状态接口返回结果</string>
    <string name="m1card_authenticate">执行认证操作</string>
    <string name="m1card_block_date_read">读取块数据</string>
    <string name="m1card_recent_data">当前数据</string>
    <string name="m1card_block_data_read_fail">读取块数据失败</string>
    <string name="m1card_block_data_write_succ">写块数据成功</string>
    <string name="m1card_block_data_write_fail">写块数据失败</string>
    <string name="m1card_add_value">执行加值操作</string>
    <string name="m1card_add_value_succ">执行加值操作成功</string>
    <string name="m1card_add_value_fail">执行加值操作失败</string>
    <string name="m1card_sub_value">执行减值操作</string>
    <string name="m1card_sub_value_succ">执行减值操作成功</string>
    <string name="m1card_sub_value_fail">执行减值操作失败</string>
    <string name="m1card_read_storage">读寄存器</string>
    <string name="m1card_write_storage">写寄存器</string>
    <string name="m1card_fx_auth">方新卡认证</string>
    <string name="mem102_open_succ">打开MEM102设备成功</string>
    <string name="mem102_open_fail">打开MEM102设备失败</string>
    <string name="mem102_close_succ">关闭MEM102设备成功</string>
    <string name="mem102_close_fail">关闭MEM102设备失败</string>
    <string name="password_is_being_modified">正在修改密码</string>
    <string name="input_data_error_reinput">输入的数据有误，请重新输入</string>
    <string name="input_length_error_reinput">输入的长度有误，请重新输入</string>
    <string name="reading_data_address">正在读数据,地址：</string>
    <string name="checking_pwd">正在进行密码校验,psw:</string>
    <string name="input_data_address">写入数据 地址:</string>
    <string name="erase_data_address">擦除数据 地址:</string>
    <string name="ordinary_card_slot">普通卡槽</string>
    <string name="vertical_card_slot">立式卡槽</string>
    <string name="password">密码</string>
    <string name="block_address">位地址</string>
    <string name="mem1608_open_succ">打开MEM1608备成功</string>
    <string name="mem1608_open_fail">打开MEM1608设备失败</string>
    <string name="mem1608_close_succ">关闭MEM1608设备成功</string>
    <string name="mem1608_close_fail">关闭MEM1608设备失败</string>
    <string name="address">地址</string>
    <string name="data">数据</string>
    <string name="length">长度</string>
    <string name="type">类型:</string>
    <string name="area">区域:</string>
    <string name="write_data_and_address">写入数据地址:</string>
    <string name="read_data_and_address">读取数据地址:</string>
    <string name="date_address_wrong_and_reinput">区域|地址数据不正确，请重新输入</string>
    <string name="date_address_length_wrong_and_reinput">区域|地址|长度不正确，请重新输入</string>
    <string name="read_psw_err_counter">读取密码错误计数器</string>
    <string name="mem4442_open_succ">打开MEM4442备成功</string>
    <string name="mem4442_open_fail">打开MEM4442设备失败</string>
    <string name="mem4442_close_succ">关闭4442设备成功</string>
    <string name="mem4442_close_fail">关闭4442设备失败</string>
    <string name="input_block_data_error_reinput">输入的块号|数据有误，请重新输入 </string>
    <string name="write_protect_data_address">写入保护数据 地址:</string>
    <string name="device_open_succ">设备打开成功</string>
    <string name="device_open_fail">设备打开失败</string>
    <string name="device_open_excp">设备打开异常</string>
    <string name="device_close_succ">设备关闭成功</string>
    <string name="device_close_fail">设备关闭失败</string>
    <string name="device_close_excp">设备关闭异常</string>
    <string name="write_data_excp">写入数据异常</string>
    <string name="data_address_wrong_and_reinput">设备|数据地址数据不正确，请重新输入</string>
    <string name="mac_caculate">执行MAC获取操作</string>
    <string name="pin_confirm">确认PIN输入</string>
    <string name="pin_cancel">取消PIN输入</string>
    <string name="external_rfcard_interrupt_succ">外接非接卡断开成功</string>
    <string name="downTmk">下载TMK(内置)</string>
    <string name="downTwk">下载TWK(内置)</string>
    <string name="startSign">开始手写(外置)</string>
    <string name="stopSign">结束手写(外置)</string>
    <string name="getHardSn">获取硬件序列号</string>
    <string name="getMacForSnk">硬件序列号Mac计算(内置)</string>
    <string name="getCheckValue">获取checkvalue(内置)</string>
    <string name="open">打开</string>
    <string name="search_card">查询状态</string>
    <string name="reset">复位</string>
    <string name="half">中断</string>
    <string name="send_apdu">发送APDU指令</string>
    <string name="close">关闭</string>
    <string name="halt">中断</string>
    <string name="get_state">查询状态</string>
    <string name="exteranl_rfcard_get_state">外接非接卡状态</string>
    <string name="exteranl_rfcard_send_cmd">外接非接卡发送指令</string>
    <string name="external_rfcard_reset">外接非接卡复位</string>
    <string name="SM4_data_encryp">国密数据加密</string>
    <string name="data_encryp">数据加密</string>
    <string name="SM4_get_pin">国密获取PIN</string>
    <string name="get_pin">获取pin</string>
    <string name="get_random">获取随机数</string>
    <string name="external_pinpad">外置密码键盘</string>
    <string name="inner_pinpad">内置密码键盘</string>
    <string name="boudate">波特率</string>
    <string name="dis_pik">分散PIK</string>
    <string name="dis_sm4_pik">分散国密PIK</string>
    <string name="dis_mak">分散MAK</string>
    <string name="dis_sm4_mak">分散国密MAK</string>
    <string name="dis_tdk">分散TDK</string>
    <string name="dis_sm4_tdk">分散国密TDK</string>
    <string name="pinpad_show">外置密码键盘提示信息</string>
    <string name="readCardtype">读取卡类型</string>
    <string name="asynSendAPDU">发送APDU指令(异步)</string>
    <string name="swipe_card_please">请刷卡</string>
    <string name="insert_card_please">请插卡</string>
    <string name="wave_card_please">请挥卡</string>
    <string name="swipe_wave_card_please">请刷/挥卡</string>
    <string name="swipe_insert_card_please">请刷/插卡</string>
    <string name="swipe_insert_wave_card_please">请刷/插/挥卡</string>
    <string name="transaction_no_leave_card">交易中，请勿拔卡</string>
    <string name="transaction_ok_leave_card">交易完成，请拔卡</string>
    <string name="input_amount_please">请输入金额</string>
    <string name="inupt_password_please">请输入密码</string>
    <string name="password_length_not_enough">密码位数不足</string>
    <string name="confirm_cardno_amount">请确认卡号与金额</string>
    <string name="communicate_wait">通讯交易，请稍候</string>
    <string name="print_wait">正在打印，请稍候</string>
    <string name="password_wrong_retransaction">密码错误，请重新交易</string>
    <string name="printer_lack_paper_deal">打印机缺纸，请处理</string>
    <string name="low_power_no_print">电量低，无法打印</string>
    <string name="transaction_success">交易成功</string>
    <string name="communicate_error">通讯故障</string>
    <string name="sign_please">请签到</string>
    <string name="balance_please">请结算</string>
    <string name="automatic_success">自助开通成功</string>
    <string name="activation_success">激活成功</string>
    <string name="intelligence_amount_read">智能数额朗读</string>
    <string name="common_amount_read">普通数额朗读</string>
</resources>