<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="horizontal" >

    <include layout="@layout/left_scroll" />

    <ScrollView
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="3" >

        <LinearLayout
            android:id="@+id/main_linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="open"
                android:text="@string/open" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="status"
                android:text="@string/search_card" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="reset"
                android:text="@string/reset" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="halt"
                android:text="@string/half" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="sendAPDU"
                android:text="@string/send_apdu" />
                
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="sendAPDUasync"
                android:text="@string/asynSendAPDU" />
            
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="readCardtype"
                android:text="@string/readCardtype" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="close"
                android:text="@string/close" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>